--- a/osu.Game.Rulesets.GLazerMemory.Tests/osu.Game.Rulesets.GLazerMemory.Tests.csproj
+++ b/osu.Game.Rulesets.GLazerMemory.Tests/osu.Game.Rulesets.GLazerMemory.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
       <StartupObject>osu.Game.Rulesets.GLazerMemory.Tests.VisualTestRunner</StartupObject>
+      <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup Label="Service">
       <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
