--- a/osu.Game.Rulesets.GLazerMemory/osu.Game.Rulesets.GLazerMemory.csproj
+++ b/osu.Game.Rulesets.GLazerMemory/osu.Game.Rulesets.GLazerMemory.csproj
@@ -5,12 +5,13 @@
     <OutputType>Library</OutputType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <RootNamespace>osu.Game.Rulesets.GLazerMemory</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\**" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NetCoreServer" Version="6.7.0" />
-    <PackageReference Include="ppy.osu.Game" Version="2023.305.0" />
+    <PackageReference Include="ppy.osu.Game" Version="2023.419.0" />
   </ItemGroup>
 </Project>
